# libfcm

./: CMakeLists.txt  README.md  libfcm.h
include/: buffermem.h  diskfilecontent.h  libfcm.h  refdir.h
include/libfcm/: buffermem.h  diskfilecontent.h  refdir.h
src/: buffermem.c  diskfilecontent.c  libfcm.c  refdir.c
